# fluxd_rust-explorer

./: .gitignore  README.md  docker-compose.e2e.yml  docker-compose.flux.yml  docker-compose.vps.yml  docker-compose.yml  flux-spec.json
.github/workflows/: ci.yml
explorer-api/: .dockerignore  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tsconfig.json
explorer-api/src/: env.ts  fluxd-rpc.ts  fluxindexer-adapter.ts  index.ts  routes.ts
explorer-api/src/tests/: contract.test.ts
flux-explorer/: .dockerignore  .gitignore  Dockerfile  Dockerfile.e2e  LICENSE  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
flux-explorer/docker/: entrypoint.sh
flux-explorer/e2e/: constellation.spec.ts  export-csv.spec.ts  smoke.spec.ts  ui-deep.spec.ts
flux-explorer/e2e/helpers/: e2e-utils.ts
flux-explorer/scripts/: populate-price-history.ts
flux-explorer/src/: instrumentation.ts  middleware.ts
flux-explorer/src/app/: globals.css  layout.tsx  page.tsx
flux-explorer/src/app/blocks/: page.tsx
flux-explorer/src/app/rich-list/: page.tsx
flux-explorer/src/components/: DataFreshness.tsx  Footer.tsx  Header.tsx  Providers.tsx  SearchBar.tsx  error-boundary.tsx
flux-explorer/src/components/address/: AddressConstellation.tsx  AddressDetail.tsx  AddressHeader.tsx  AddressOverview.tsx  AddressTransactions.tsx  TransactionExportDialog.tsx
flux-explorer/src/components/block/: BlockDetail.tsx  BlockHeader.tsx  BlockNavigation.tsx  BlockStats.tsx  BlockTransactions.tsx  BlockVisual.tsx
flux-explorer/src/components/blocks/: BlocksList.tsx
flux-explorer/src/components/common/: PollingControls.tsx
flux-explorer/src/components/home/: LatestBlocks.tsx  NetworkStats.tsx  RealtimeSignalHero.tsx  RecentBlockRewards.tsx
flux-explorer/src/components/layout/: ExplorerPageShell.tsx
flux-explorer/src/components/rich-list/: RichListTable.tsx
flux-explorer/src/components/ui/: card.tsx  (+6 more)
flux-explorer/src/data/: rich-list-labels.ts
flux-explorer/src/hooks/: usePolling.ts
flux-explorer/src/lib/: block-rewards.ts  price-init.ts
flux-explorer/src/types/: address-constellation.ts  env.d.ts  flux-api.ts  flux.ts  rich-list.ts
fluxd_rust/: .dockerignore  Cargo.toml  Dockerfile
fluxd_rust/alerts/: prometheus_rules.yml
fluxd_rust/crates/chainstate/: Cargo.toml
fluxd_rust/crates/chainstate/src/: address_balance.rs  address_deltas.rs  address_index.rs  address_neighbors.rs  address_tx_index.rs  anchors.rs  blockindex.rs  filemeta.rs  flatfiles.rs  index.rs  lib.rs  metrics.rs  shielded.rs  spentindex.rs  state.rs  txindex.rs  undo.rs  utxo.rs  validation.rs
fluxd_rust/crates/chainstate/tests/: address_index.rs  deep_reorg.rs  reorg_fork.rs  tx_index.rs
fluxd_rust/crates/consensus/: Cargo.toml
fluxd_rust/crates/consensus/src/: constants.rs  lib.rs  money.rs  params.rs  rewards.rs  upgrades.rs
fluxd_rust/crates/fluxnode/: Cargo.toml
fluxd_rust/crates/fluxnode/src/: cache.rs  lib.rs  storage.rs  validation.rs
fluxd_rust/crates/fluxnode/tests/: schedule.rs
fluxd_rust/crates/log/: Cargo.toml
fluxd_rust/crates/log/src/: lib.rs
fluxd_rust/crates/node/: Cargo.toml
fluxd_rust/crates/node/src/: dashboard.rs  db_info.rs  fee_estimator.rs  fluxd.rs  fluxd_cli.rs  main.rs  mempool.rs  p2p.rs  p2p_server.rs  peer_book.rs  rpc.rs  stats.rs  tui.rs  tx_relay.rs  verify_chain.rs  wallet.rs
fluxd_rust/crates/pon/: Cargo.toml
fluxd_rust/crates/pon/src/: lib.rs  slot.rs  validation.rs
fluxd_rust/crates/pow/: Cargo.toml
fluxd_rust/crates/pow/src/: difficulty.rs  equihash.rs  equihash_verify.rs  lib.rs  validation.rs
fluxd_rust/crates/pow/tests/: compact.rs
fluxd_rust/crates/primitives/: Cargo.toml
fluxd_rust/crates/primitives/src/: address.rs  block.rs  encoding.rs  hash.rs  lib.rs  merkleblock.rs  outpoint.rs  transaction.rs
fluxd_rust/crates/primitives/tests/: property.rs  serialization.rs  wif.rs
fluxd_rust/crates/script/: Cargo.toml
fluxd_rust/crates/script/src/: interpreter.rs  lib.rs  message.rs  secp.rs  sighash.rs  standard.rs
fluxd_rust/crates/script/tests/: sighash.rs  sighash_vectors.rs  standard.rs
fluxd_rust/crates/shielded/: Cargo.toml
fluxd_rust/crates/shielded/src/: lib.rs  params.rs  sprout.rs  verify.rs
fluxd_rust/crates/shielded/tests/: generate_vectors.rs  merkle_vectors.rs  verify_vectors.rs
fluxd_rust/crates/shielded/tests/vectors/: verify_transaction.json
fluxd_rust/crates/storage/: Cargo.toml
fluxd_rust/crates/storage/src/: fjall.rs  lib.rs  memory.rs
fluxd_rust/crates/storage/tests/: column_mapping.rs  fjall_smoke.rs
fluxd_rust/docker/: entrypoint.sh
fluxd_rust/docs/: ARCHITECTURE.md  BACKUP_RESTORE.md  CONFIGURATION.md  FAST_SYNC.md  INDEXES.md  OPERATIONS.md  PARITY_TESTS.md  QUICKSTART.md  README.md  RPC.md  RPC_PARITY.md  SCALING.md  TELEMETRY.md  TROUBLESHOOTING.md  TUI.md
fluxd_rust/scripts/: alert_checks.sh  backup_volumes.sh  longrun_watchdog.sh  p2p_mempool_probe.sh  progress_gate.sh  remote_smoke_test.sh  restore_volumes.sh  rolling_update_vps.sh  run_shielded_tests.sh  shielded_wallet_smoke_test.sh  stats_delta.sh  vps_deploy_smoke_checklist.sh
scripts/: run-e2e.sh
(+44 files in other folders)
