[package]
name = "fluxd-chainstate"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
fluxd-consensus = { path = "../consensus" }
fluxd-log = { path = "../log" }
fluxd-primitives = { path = "../primitives" }
fluxd-script = { path = "../script" }
fluxd-pow = { path = "../pow" }
fluxd-pon = { path = "../pon" }
fluxd-fluxnode = { path = "../fluxnode" }
fluxd-shielded = { path = "../shielded" }
core2 = "0.4"
fluxd-storage = { path = "../storage" }
incrementalmerkletree = { version = "0.8.2", features = ["legacy-api"] }
primitive-types = "0.14"
rayon = "1.10"
sapling-crypto = "0.5"
sha2 = { version = "0.10", features = ["compress"] }
zcash_primitives = { version = "0.26", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
secp256k1 = { version = "0.29", features = ["recovery"] }
