[package]
name = "fluxd"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/main.rs"

[[bin]]
name = "fluxd"
path = "src/fluxd.rs"

[[bin]]
name = "fluxd-cli"
path = "src/fluxd_cli.rs"

[dependencies]
fluxd-chainstate = { path = "../chainstate" }
fluxd-consensus = { path = "../consensus" }
fluxd-fluxnode = { path = "../fluxnode" }
fluxd-log = { path = "../log" }
fluxd-pow = { path = "../pow" }
fluxd-primitives = { path = "../primitives" }
fluxd-script = { path = "../script" }
fluxd-shielded = { path = "../shielded" }
fluxd-storage = { path = "../storage", features = ["fjall"] }
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
crossbeam-channel = "0.5"
base64 = "0.22"
bech32 = "0.11"
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
primitive-types = "0.14"
secp256k1 = "0.29"
fs2 = "0.4"
sapling-crypto = "0.5"
jubjub = "0.10"
zip32 = "0.2"
zcash_note_encryption = "0.4"
zcash_primitives = { version = "0.26", default-features = false, features = ["std", "circuits", "non-standard-fees"] }
zcash_protocol = { version = "0.7.2", default-features = false, features = ["std"] }
zcash_proofs = { version = "0.26", default-features = false, features = ["local-prover"] }
transparent = { package = "zcash_transparent", version = "0.6.3", default-features = false, features = ["std"] }
