[package]
name = "fluxd-script"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
fluxd-consensus = { path = "../consensus" }
fluxd-log = { path = "../log" }
fluxd-primitives = { path = "../primitives" }
blake2b_simd = "1"
secp256k1 = { version = "0.29", features = ["recovery"] }
ripemd = "0.1"
sha1 = "0.10"

[dev-dependencies]
serde_json = "1"
