[package]
name = "fluxd-shielded"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
fluxd-consensus = { path = "../consensus" }
fluxd-primitives = { path = "../primitives" }
fluxd-script = { path = "../script" }
blake2b_simd = "1"
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
bls12_381 = "0.8"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
jubjub = "0.10"
minreq = { version = "2.14.1", default-features = false, features = ["https"] }
rand_core = "0.6"
redjubjub = "0.8"
sapling-crypto = "0.5"
group = "0.13"
sha2 = { version = "0.10", features = ["compress"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zcash_proofs = { version = "0.26", default-features = false, features = ["multicore"] }

[dev-dependencies]
core2 = "0.4"
incrementalmerkletree = { version = "0.8.2", features = ["legacy-api"] }
rand_chacha = "0.3"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
transparent = { package = "zcash_transparent", version = "0.6.3", default-features = false, features = ["std"] }
zcash_primitives = { version = "0.26", default-features = false, features = ["std", "circuits"] }
zcash_protocol = { version = "0.7.2", default-features = false, features = ["std"] }
zcash_proofs = { version = "0.26", default-features = false, features = ["local-prover"] }
